[tool.poetry]
name = "EZ_identification"
version = "0.0.1"
description = "Epileptogenic zone identification"
authors = ["Bartłomiej Chybowski <b.s.chybowski@sms.ed.ac.uk>", "Petr Klimeš <klimes@isibrno.cz>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5"
numpy = "^1.24"
scipy = "^1.7.2"
scikit-learn = "^1.2"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
statsmodels = "^0.13.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
